Fra Ayko til KP

--- a/butikk.html
+++ b/butikk.html
@@ -16,14 +16,14 @@
                 <li><a href="om.html">OM</a></li>
             </ul>
         </nav>
-        <h1 class="band-name band-name-large">AYKO</h1>
+        <h1 class="band-name band-name-large">KjærringPod</h1>
     </header>
 
     <section class="container content-section">
-        <h2 class="section-header">MUSIKK</h2>
+        <h2 class="section-header">EPISODER</h2>
         <div class="shop-items">
             <div class="shop-item">
-                <span class="shop-item-title">Album 1</span>
+                <span class="shop-item-title">EP 1</span>
                 <img class="shop-item-img" src="https://images.unsplash.com/photo-1592512238017-e8bd5ae30282?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1001&q=80"
                     width="200">
                 <div class="shop-item-details">
@@ -33,7 +33,7 @@
             </div>
 
             <div class="shop-item">
-                    <span class="shop-item-title">Album 2</span>
+                    <span class="shop-item-title">EP 2</span>
                 <img class="shop-item-img" src="https://images.unsplash.com/photo-1592441975227-490c8062625c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
                     width="200">
                 <div class="shop-item-details">
@@ -43,7 +43,7 @@
             </div>
 
             <div class="shop-item">
-                <span class="shop-item-title">Album 3</span>
+                <span class="shop-item-title">EP 3</span>
                 <img class="shop-item-img" src="https://images.unsplash.com/photo-1583115260445-f95fe37202ae?ixlib=rb-1.2.1&auto=format&fit=crop&w=1237&q=80"
                     width="200" height="200">
                 <div class="shop-item-details">
@@ -53,7 +53,7 @@
             </div>
 
             <div class="shop-item">
-                <span class="shop-item-title">Album 4</span>
+                <span class="shop-item-title">EP 4</span>
                 <img class="shop-item-img" src="https://images.unsplash.com/photo-1592434089408-7e3745969e13?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
                     width="200" height="200">
                 <div class="shop-item-details">
@@ -132,7 +132,7 @@
 
     <footer class="main-footer">
         <div class="container main-footer-container">
-            <h3 class="band-name">AYKO</h3>
+            <h3 class="band-name">KjærringPod</h3>
             <ul class="nav footer-nav">
                 <li>
                     <a href="https://www.youtube.com/watch?v=KRuXB2BQYgM" target="_blank"><img
