--- a/om.html
+++ b/om.html
@@ -16,7 +16,7 @@
                 <li><a href="om.html">OM</a></li>
             </ul>
         </nav>
-        <h1 class="band-name band-name-large">AYKO</h1>
+        <h1 class="band-name band-name-large">KjærringPod</h1>
     </header>
     <section class="content-section container">
         <h2 class="section-header">OM</h2>
@@ -27,7 +27,7 @@
         Cras id erat magna. Nam vulputate faucibus rutrum. Nunc congue scelerisque volutpat. Mauris tortor elit, posuere vitae
         pulvinar et, eleifend id libero. Maecenas tortor dui, pretium quis mauris et, elementum pulvinar nunc.
         </p>
-        <img class="about-band-image" src="https://i.ytimg.com/vi/ftpFwKPiLX4/maxresdefault.jpg">
+        <img class="about-band-image" src="https://images.unsplash.com/photo-1487537023671-8dce1a785863?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">
         <p>Vivamus at justo maximus, rhoncus mi in, laoreet nulla. Vestibulum quam metus, viverra vel lorem vel, semper fermentum
         leo. Maecenas vel massa auctor, dignissim felis vitae, rutrum sapien. Cras a lacus egestas odio dapibus ultrices. Nam
         lobortis elementum sagittis. Fusce commodo lacus elit, ac efficitur nulla fermentum et. Maecenas lobortis, ex ac gravida
@@ -38,7 +38,7 @@
     </section>
     <footer class="main-footer">
         <div class="container main-footer-container">
-            <h3 class="band-name">AYKO</h3>
+            <h3 class="band-name">KjærringPod</h3>
             <ul class="nav footer-nav">
                 <li>
                     <a href="https://www.youtube.com/watch?v=KRuXB2BQYgM" target="_blank"><img
