--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
                 <li><a href="om.html">OM</a></li>
             </ul>
         </nav>
-        <h1 class="band-name band-name-large">AYKO</h1>
+        <h1 class="band-name band-name-large">KjærringPod</h1>
         <div class="container">
-            <button class="btn btn-header" type="button">Kjøp den nyeste plata</button>
+            <button class="btn btn-header" type="button">Hør den nyeste podden</button>
         </div>
         <button class="btn btn-header btn-play" type="button">&#9658;</button>
     </header>
     <section class="content-section container">
-        <h2 class="section-header">TURNÉ</h2>
+        <h2 class="section-header">LIVESHOW</h2>
         <div>
             <div class="tour-row">
                 <span class="tour-item tour-date">6. Juli</span>
@@ -56,7 +56,7 @@
     </section>
     <footer class="main-footer">
         <div class="container main-footer-container">
-            <h3 class="band-name">AYKO</h3>
+            <h3 class="band-name">KjærringPod</h3>
             <ul class="nav footer-nav">
                 <li>
                     <a href="https://www.youtube.com/watch?v=KRuXB2BQYgM" target="_blank"><img
